# vibedialer

./: .gitignore  BACKENDS.md  CLAUDE.md  DIALING.md  INVESTIGATION_REPORT.md  LICENSE  PR_DESCRIPTION.md  PR_SESSION_TRACKING_DESCRIPTION.md  PR_TWILIO_DESCRIPTION.md  README.md  STORAGE.md  main.py  pyproject.toml  test_grid_investigation.py  test_ui_debug.py  vibe
docs/: BACKENDS.md  DIALING.md  STORAGE.md
tests/: __init__.py  test_art.py  test_backends.py  test_cli.py  test_cli_noninteractive.py  test_dialer.py  test_modem_audio.py  test_modem_enhancements.py  test_resume.py  test_session.py  test_storage.py  test_tui.py  test_tui_layout.py  test_tui_stop.py  test_validation.py  test_voip_amd.py
vibedialer/: __init__.py  __main__.py  art.py  audio_analysis.py  backends.py  cli.py  csv_storage.py  dialer.py  iprelay.py  modem.py  resume.py  session.py  sqlite_storage.py  storage.py  tui.py  validation.py  voip.py
vibedialer/assets/ansi_art/: README.md  example_01.txt
vibedialer/backends/: __init__.py  base.py  iprelay.py  modem.py  voip.py
vibedialer/storage/: __init__.py  base.py  csv.py  sqlite.py
vibedialer/ui/: __init__.py  art.py
vibedialer/ui/assets/ansi_art/: README.md  hack_the_planet.ans  hackers_jolie.ans
vibedialer/ui/tui/: __init__.py  app.py
