[project]
name = "vibedialer"
version = "0.1.0"
description = "A war dialer TUI application for sequential phone number dialing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=6.6.0",
    "typer>=0.20.0",
]

[project.scripts]
vibedialer = "vibedialer.cli:app"

[dependency-groups]
dev = [
    "coverage>=7.11.3",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.5",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
